[project]
name = "meditriage-openenv"
version = "1.0.0"
description = "Medical Triage RL Environment"
requires-python = ">=3.11"
dependencies = [
    "openenv-core>=0.2.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "pydantic>=2.0.0",
    "pandas>=1.5.0",
    "numpy>=1.24.0",
    "requests>=2.28.0",
    "python-dotenv>=1.0.0",
    "google-genai>=0.1.0",
]

[project.scripts]
server = "meditriage_env.server.app:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.backends.legacy:build"